# AmbientAgent

./: 1.ipynb  10.ipynb  11.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  README.md  pyproject.toml
email_assistant/: prompts.py  template.py  util_one.py  utils.py
langchain/: PII.ipynb  agent.ipynb  agent_one.ipynb  before.ipynb  dars.drawio  docker-compose.yaml  guard_rail.ipynb  guard_railss.ipynb  human_loop.ipynb  langchain-start.ipynb  langchain.ipynb  messages.ipynb  model.ipynb  model_one.ipynb  multi-model.ipynb  prompt_injection.ipynb  quick_start.ipynb  quikc_start.ipynb  rate_limit.ipynb  short-term-memory.ipynb  structured_output.ipynb  summarize.ipynb  summarized.ipynb  system_prompt.ipynb  tool_call.ipynb  tool_runtime.ipynb  tool_strategy.ipynb  trim-message.ipynb  wrap_tool_call.ipynb
