[project]
name = "langchain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html2text>=2025.4.15",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.3",
    "pillow>=12.1.0",
    "psycopg-binary>=3.3.2",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
